# WEB_modul_02_08

./: hw.py  models.py  pyproject.toml
Homework_2/: consumer_email.py  consumer_sms.py  models.py  producer.py
