[tool.poetry]
name = "web-modul-02-08"
version = "0.1.0"
description = ""
authors = ["Daryna Mirzaholi <dmirzagholi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.2"
cascade = "^0.1"
mongoengine = "^0.28.0"
redis = "^5.0.2"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
